--- a/Thesis/res/layout/activity_main.xml
+++ b/Thesis/res/layout/activity_main.xml
@@ -1,48 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
-   android:orientation="vertical"
-   android:layout_width="match_parent"
-   android:layout_height="match_parent" 
-    xmlns:android="http://schemas.android.com/apk/res/android">
-   <android.support.v4.view.ViewPager
-      android:id="@+id/main_ViewPager"
-      android:layout_width="match_parent"
-      android:layout_height="0dp"
-      android:layout_weight="1.0" 
-       />
-       <RadioGroup 
-         android:id="@+id/main_tab_RadioGroup"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:layout_gravity="bottom"
-         android:background="@color/main_tab_bg"
-         android:gravity="center_vertical"
-         android:orientation="horizontal"  
-           >
-           <RadioButton 
-               android:id="@+id/radio_chats"
-               style="@style/main_tab" 
-               android:drawableTop="@drawable/icon_chat"
-               android:text="微信"  
-               android:checked="true"
-               />
-           <RadioButton 
-               android:id="@+id/radio_contacts"
-               style="@style/main_tab"
-               android:drawableTop="@drawable/icon_contacts"
-               android:text="通讯录"
-               />
-           <RadioButton 
-               android:id="@+id/radio_discover"
-               style="@style/main_tab"
-               android:drawableTop="@drawable/icon_discover"
-               android:text="发现"
-               />
-           <RadioButton 
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
+
+    <RelativeLayout
+        android:id="@+id/title"
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/qq_dimen_96px"
+        android:background="@android:color/black" >
+
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="@dimen/qq_dimen_80px"
+            android:layout_height="@dimen/qq_dimen_80px"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:background="@drawable/logo" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="@dimen/qq_dimen_8px"
+            android:layout_toRightOf="@+id/img"
+            android:text="@string/app_name"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/qq_dimen_30px" />
+
+        <ImageView
+            android:id="@+id/img_right"
+            android:layout_width="@dimen/qq_dimen_70px"
+            android:layout_height="@dimen/qq_dimen_70px"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/qq_right" />
+    </RelativeLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/main_ViewPager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.0" />
+
+    <RadioGroup
+        android:id="@+id/main_tab_RadioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="@color/main_tab_bg"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <RadioButton
+            android:id="@+id/radio_chats"
+            style="@style/main_tab"
+            android:background="@null"
+            android:checked="true"
+            android:drawableTop="@drawable/icon_chat"
+            android:text="微信" />
+
+        <RadioButton
+            android:id="@+id/radio_contacts"
+            style="@style/main_tab"
+            android:background="@null"
+            android:drawableTop="@drawable/icon_contacts"
+            android:text="通讯录" />
+
+        <RadioButton
+            android:id="@+id/radio_discover"
+            style="@style/main_tab"
+            android:background="@null"
+            android:drawableTop="@drawable/icon_discover"
+            android:text="发现" />
+
+        <RadioButton
             android:id="@+id/radio_me"
             style="@style/main_tab"
+            android:background="@null"
             android:drawableTop="@drawable/icon_me"
-            android:text="我"   
-               />
-       </RadioGroup>
-   </LinearLayout> 
+            android:text="我" />
+    </RadioGroup>
+
+</LinearLayout>
