--- a/Thesis/res/layout/activity_login.xml
+++ b/Thesis/res/layout/activity_login.xml
@@ -13,6 +13,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_alignParentTop="true"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_centerHorizontal="true"
         android:contentDescription="@string/app_name"
         android:src="@drawable/logo" />
