--- a/Thesis/res/layout/activity_main.xml
+++ b/Thesis/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
             android:layout_height="@dimen/qq_dimen_80px"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:background="@drawable/logo" />
 
         <TextView
@@ -23,6 +24,8 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginLeft="@dimen/qq_dimen_8px"
+            android:layout_marginStart="@dimen/qq_dimen_8px"
+            android:layout_toEndOf="@+id/img"
             android:layout_toRightOf="@+id/img"
             android:text="@string/app_name"
             android:textColor="@android:color/white"
@@ -32,6 +35,7 @@
             android:id="@+id/img_right"
             android:layout_width="@dimen/qq_dimen_70px"
             android:layout_height="@dimen/qq_dimen_70px"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@drawable/qq_right" />
