设置了TextView在ExpandableListView展开时滚动, 在adapter的 getGroupView中根据isExpanded判断是否展开, 然后设置TextView的焦点

--- a/Thesis/res/layout/fragment_thesis.xml
+++ b/Thesis/res/layout/fragment_thesis.xml
@@ -14,13 +14,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_selector"
-            android:textSize="20sp"
-            android:text="@string/button_view_result" />
+            android:text="@string/button_view_result"
+            android:textSize="20sp" />
 
         <com.jnu.thesis.view.EmbeddedListView
             android:id="@+id/listView_thesis"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent" >
+            android:layout_height="fill_parent"
+            android:focusable="true" >
         </com.jnu.thesis.view.EmbeddedListView>
     </LinearLayout>
 
