更改了论文浏览的布局, 本来有几个child, 现在一个就好了, 下面加了留言和选题的按钮. ListView里的getView里的convertView好像是指上一个调用getView时inflate的布局, 因为通常是重复的所以可以复用.

--- a/Thesis/res/layout/view_thesis_child.xml
+++ b/Thesis/res/layout/view_thesis_child.xml
@@ -13,8 +13,31 @@
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="60dp"
         android:layout_marginStart="60dp"
-        android:singleLine="false"
         android:gravity="center_vertical"
+        android:singleLine="false"
         android:textSize="20dp" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textViewChild"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/buttonLeaveMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/button_leave_message" >
+        </Button>
+
+        <Button
+            android:id="@+id/buttonSubmit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/button_submit" >
+        </Button>
+    </LinearLayout>
 
 </RelativeLayout>
