--- a/Thesis/res/layout/fragment_thesis.xml
+++ b/Thesis/res/layout/fragment_thesis.xml
@@ -1,28 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/thesis_fragment"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/scrollView_thesis"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:layout_alignParentTop="true" >
 
-        <Button
-            android:id="@+id/button_view_result"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/button_selector"
-            android:text="@string/button_view_result"
-            android:textSize="20sp" />
-
-        <com.jnu.thesis.view.EmbeddedListView
-            android:id="@+id/listView_thesis"
+        <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:focusable="true" >
-        </com.jnu.thesis.view.EmbeddedListView>
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-</ScrollView>
+            <Button
+                android:id="@+id/button_view_result"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_selector"
+                android:text="@string/button_view_result"
+                android:textSize="20dp" />
+
+            <com.jnu.thesis.view.EmbeddedListView
+                android:id="@+id/listView_thesis"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:focusable="true" >
+            </com.jnu.thesis.view.EmbeddedListView>
+        </LinearLayout>
+    </ScrollView>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/button_selector"
+        android:textSize="20dp"
+        android:text="@string/button_submit" >
+    </Button>
+
+</RelativeLayout>
