--- a/Thesis/res/layout/activity_login.xml
+++ b/Thesis/res/layout/activity_login.xml
@@ -13,8 +13,8 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:contentDescription="@string/app_name"
         android:src="@drawable/logo" />
 
@@ -24,8 +24,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/logo_login"
         android:layout_centerHorizontal="true"
-        android:hint="@string/editText_userName"
-        android:ems="10" >
+        android:background="@drawable/shape_username"
+        android:ems="10"
+        android:hint="@string/editText_userName" >
 
         <requestFocus />
     </EditText>
@@ -36,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText_userName"
         android:layout_centerHorizontal="true"
+        android:background="@drawable/shape_password"
         android:ems="10"
         android:hint="@string/editText_password"
         android:inputType="textPassword" />
@@ -45,7 +47,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText_password"
-        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/common_button_selector"
         android:text="@string/button_login" />
 
 </RelativeLayout>
