--- a/Thesis/res/layout/fragment_thesis.xml
+++ b/Thesis/res/layout/fragment_thesis.xml
@@ -8,7 +8,8 @@
         android:id="@+id/scrollView_thesis"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true" >
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="40dp" >
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -26,19 +27,23 @@
             <com.jnu.thesis.view.EmbeddedListView
                 android:id="@+id/listView_thesis"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:focusable="true" >
+                android:layout_height="wrap_content"
+                android:cacheColorHint="#00000000"
+                android:focusable="true"
+                android:listSelector="#FFFFFF" >
             </com.jnu.thesis.view.EmbeddedListView>
         </LinearLayout>
     </ScrollView>
 
     <Button
+        android:id="@+id/button_submit"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:layout_above="@id/scrollView_thesis"
         android:layout_alignParentBottom="true"
         android:background="@drawable/button_selector"
-        android:textSize="20dp"
-        android:text="@string/button_submit" >
+        android:text="@string/button_submit"
+        android:textSize="20dp" >
     </Button>
 
 </RelativeLayout>
