--- a/Thesis/res/layout/view_thesis_child.xml
+++ b/Thesis/res/layout/view_thesis_child.xml
@@ -14,8 +14,9 @@
         android:layout_marginLeft="60dp"
         android:layout_marginStart="60dp"
         android:gravity="center_vertical"
+        android:lineSpacingExtra="8dp"
         android:singleLine="false"
-        android:textSize="20dp" />
+        android:textSize="15sp" />
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -28,15 +29,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/button_leave_message" >
+            android:background="@drawable/common_button_selector"
+            android:text="@string/button_leave_message"
+            android:textSize="15dp" >
         </Button>
 
         <Button
-            android:id="@+id/buttonSubmit"
+            android:id="@+id/buttonSelect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/button_submit" >
+            android:background="@drawable/common_button_selector"
+            android:text="@string/button_select"
+            android:textSize="15dp" >
         </Button>
     </LinearLayout>
 
