--- a/Thesis/res/layout/view_thesis_group.xml
+++ b/Thesis/res/layout/view_thesis_group.xml
@@ -6,7 +6,7 @@
     <TextView
         android:id="@+id/textViewGroup"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -19,6 +19,6 @@
         android:marqueeRepeatLimit="marquee_forever"
         android:scrollHorizontally="true"
         android:singleLine="true"
-        android:textSize="25dp" />
+        android:textSize="20sp" />
 
 </RelativeLayout>
