使用popupwindow, 增加选择第几志愿菜单, 被选中的课题变成蓝色

--- a/Thesis/res/values-xhdpi/dimen.xml
+++ b/Thesis/res/values-xhdpi/dimen.xml
@@ -8,5 +8,6 @@
     <dimen name="qq_dimen_30px">15dp</dimen>
     <dimen name="qq_dimen_70px">35dp</dimen>
     <dimen name="qq_dimen_660px">330dp</dimen>
+    <dimen name="qq_dimen_330px">146.67dp</dimen>
 
 </resources>
