--- a/Thesis/res/layout/choice_item.xml
+++ b/Thesis/res/layout/choice_item.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/qq_dimen_330px"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="end"
     android:background="@android:color/transparent"
-    android:orientation="vertical" >
+    android:baselineAligned="false"
+    android:orientation="horizontal" >
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:background="@android:color/white"
         android:orientation="vertical" >
 
         <Button
             android:id="@+id/button_first"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/qq_dimen_80px"
+            android:layout_height="wrap_content"
             android:background="@drawable/common_button_selector"
             android:gravity="center"
             android:singleLine="true"
@@ -28,7 +26,7 @@
         <Button
             android:id="@+id/button_second"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/qq_dimen_80px"
+            android:layout_height="wrap_content"
             android:background="@drawable/common_button_selector"
             android:gravity="center"
             android:singleLine="true"
@@ -39,7 +37,7 @@
         <Button
             android:id="@+id/button_third"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/qq_dimen_80px"
+            android:layout_height="wrap_content"
             android:background="@drawable/common_button_selector"
             android:gravity="center"
             android:singleLine="true"
@@ -48,4 +46,4 @@
             android:textSize="15dp" />
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
