--- a/Thesis/res/layout/activity_login.xml
+++ b/Thesis/res/layout/activity_login.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -50,5 +51,16 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/common_button_selector"
         android:text="@string/button_login" />
+
+    <TextView
+        android:id="@+id/textView_teacherEntry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/button_login"
+        android:layout_alignRight="@+id/button_login"
+        android:layout_below="@+id/button_login"
+        android:layout_marginTop="10dp"
+        android:text="@string/teacher_entry"
+        android:textColor="@color/textcolor_checked" />
 
 </RelativeLayout>
