我要呕了, 周围都改过先上传 1. 加了个activity, 作为教师的主界面, 写了选学生的界面, 选个题然后又弹出个activity选学生 2. 加了个返回按钮, 颜色有点问题看得不是很清楚, 晚一点p好点 3. bean的no换成String类型了 4. 调了学生选题界面中child的左margin, 本来太阔了 5. 曾经尝试把ExpandableListView的indicator换掉, 发现拉伸了好样衰, 9patch也不适用

--- a/Thesis/res/layout/activity_main.xml
+++ b/Thesis/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         android:id="@+id/title"
         android:layout_width="fill_parent"
         android:layout_height="@dimen/qq_dimen_96px"
-        android:background="@android:color/black" >
+        android:background="#2E3132" >
 
         <ImageView
             android:id="@+id/img"
