--- a/Thesis/res/layout/view_thesis_group.xml
+++ b/Thesis/res/layout/view_thesis_group.xml
@@ -3,22 +3,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <ImageView
+        android:id="@+id/indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:src="@null" />
+
     <TextView
         android:id="@+id/textViewGroup"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="40dp"
-        android:layout_marginStart="40dp"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_toLeftOf="@id/indicator"
+        android:layout_toStartOf="@id/indicator"
         android:ellipsize="marquee"
         android:focusableInTouchMode="true"
         android:gravity="center_vertical"
         android:marqueeRepeatLimit="marquee_forever"
         android:scrollHorizontally="true"
         android:singleLine="true"
-        android:textSize="20sp" />
+        android:textSize="16sp" />
 
 </RelativeLayout>
