1. 调整UI, 全部换上自定义的adapter. 2. ChecBox别用OnCheckedListener, 随便划一下就调用, 用OnClickListener就好.

--- a/Thesis/res/layout/activity_login.xml
+++ b/Thesis/res/layout/activity_login.xml
@@ -61,6 +61,7 @@
         android:layout_below="@+id/button_login"
         android:layout_marginTop="10dp"
         android:text="@string/teacher_entry"
-        android:textColor="@color/textcolor_checked" />
+        android:textColor="@color/textcolor_checked"
+        android:textSize="16dp" />
 
 </RelativeLayout>
