--- a/Thesis/res/layout/view_thesis_child.xml
+++ b/Thesis/res/layout/view_thesis_child.xml
@@ -16,7 +16,7 @@
         android:gravity="center_vertical"
         android:lineSpacingExtra="8dp"
         android:singleLine="false"
-        android:textSize="15sp" />
+        android:textSize="15dp" />
 
     <LinearLayout
         android:layout_width="fill_parent"
