--- a/Thesis/res/layout/view_thesis_group.xml
+++ b/Thesis/res/layout/view_thesis_group.xml
@@ -32,6 +32,6 @@
         android:marqueeRepeatLimit="marquee_forever"
         android:scrollHorizontally="true"
         android:singleLine="true"
-        android:textSize="16sp" />
+        android:textSize="18dp" />
 
 </RelativeLayout>
