--- a/Thesis/res/layout/choice_item.xml
+++ b/Thesis/res/layout/choice_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
+    android:background="@drawable/choice_list_background"
     android:baselineAligned="false"
     android:orientation="horizontal" >
 
@@ -16,29 +16,39 @@
             android:id="@+id/button_first"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/common_button_selector"
+            android:background="@drawable/blank_button_selector"
             android:gravity="center"
             android:singleLine="true"
             android:text="@string/first_choice"
             android:textColor="@android:color/black"
             android:textSize="15dp" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="#dcdcdc" />
+
         <Button
             android:id="@+id/button_second"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/common_button_selector"
+            android:background="@drawable/blank_button_selector"
             android:gravity="center"
             android:singleLine="true"
             android:text="@string/second_choice"
             android:textColor="@android:color/black"
             android:textSize="15dp" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="#dcdcdc" />
+
         <Button
             android:id="@+id/button_third"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/common_button_selector"
+            android:background="@drawable/blank_button_selector"
             android:gravity="center"
             android:singleLine="true"
             android:text="@string/third_choice"
