--- a/Thesis/res/layout/activity_main.xml
+++ b/Thesis/res/layout/activity_main.xml
@@ -38,7 +38,8 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/qq_right" />
+            android:background="@drawable/qq_right"
+            android:visibility="gone" />
     </RelativeLayout>
 
     <android.support.v4.view.ViewPager
