--- a/Thesis/res/layout/activity_message.xml
+++ b/Thesis/res/layout/activity_message.xml
@@ -18,7 +18,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_ab_back_white2" />
+            android:src="@drawable/ic_ab_back_holo_dark_am" />
 
         <ImageView
             android:id="@+id/img"
@@ -38,28 +38,14 @@
             android:layout_marginStart="@dimen/qq_dimen_8px"
             android:layout_toEndOf="@+id/img"
             android:layout_toRightOf="@+id/img"
-            android:text="@string/app_name"
+            android:text="@string/message_detail"
             android:textColor="@android:color/white"
             android:textSize="@dimen/qq_dimen_30px" />
-
-        <ImageView
-            android:id="@+id/button_corner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:paddingEnd="5dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="5dp"
-            android:paddingStart="0dp"
-            android:src="@drawable/btn_check_on_pressed_holo_dark" />
     </RelativeLayout>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#EEEEEE" >
+        android:layout_height="match_parent" >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -69,19 +55,44 @@
             <TextView
                 android:id="@+id/textView_msg_title"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="#FFFFFF" />
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView_msg_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="3dp"
+                android:textColor="#A7C974"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textView_msg_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="3dp"
+                android:textSize="16sp" />
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="16dp"
-                android:background="#00FFFFFF" />
+                android:layout_height="1dp"
+                android:layout_marginBottom="3dp"
+                android:layout_marginTop="3dp"
+                android:background="#bcbcbc" />
 
             <TextView
                 android:id="@+id/textView_msg_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#FFFFFF" />
+                android:layout_marginLeft="10dp"
+                android:textSize="20sp" />
         </LinearLayout>
     </ScrollView>
 
