--- a/Thesis/res/layout/view_message_item.xml
+++ b/Thesis/res/layout/view_message_item.xml
@@ -41,6 +41,7 @@
             android:marqueeRepeatLimit="marquee_forever"
             android:scrollHorizontally="true"
             android:singleLine="true"
+            android:textColor="@color/textcolor_checked"
             android:textSize="18dp" />
 
         <TextView
