--- a/Thesis/res/layout/fragment_thesis.xml
+++ b/Thesis/res/layout/fragment_thesis.xml
@@ -9,8 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:orientation="horizontal"
-        android:visibility="gone" >
+        android:orientation="horizontal" >
 
         <ProgressBar
             android:layout_width="18dp"
@@ -26,12 +25,38 @@
             android:textSize="18dp" />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="horizontal"
+        android:visibility="gone" >
+
+        <Button
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/ic_perm_group_sync_settings" />
+
+        <Button
+            android:id="@+id/button_refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/blank_button_selector"
+            android:gravity="center_vertical"
+            android:text="@string/refresh"
+            android:textSize="18dp" />
+    </LinearLayout>
+
     <ScrollView
         android:id="@+id/scrollView_thesis"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="40dp" >
+        android:layout_marginBottom="40dp"
+        android:visibility="gone" >
 
         <LinearLayout
             android:layout_width="fill_parent"
