1. 增加加密模块, 密码加密后再保存在数据库. 2. 把选课接口改好. 3. 添加查看已选课题界面.

--- a/Thesis/res/layout/fragment_me.xml
+++ b/Thesis/res/layout/fragment_me.xml
@@ -32,6 +32,19 @@
             android:layout_height="16dp"
             android:background="#00FFFFFF" />
 
+        <TextView
+            android:id="@+id/button_myList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/blank_button_selector"
+            android:text="@string/button_myList"
+            android:textSize="18dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="16dp"
+            android:background="#00FFFFFF" />
+
         <Button
             android:id="@+id/button_logout"
             android:layout_width="match_parent"
