--- a/Thesis/res/layout/fragment_thesis.xml
+++ b/Thesis/res/layout/fragment_thesis.xml
@@ -4,6 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
+    <!-- 正在加载提示 -->
+
     <LinearLayout
         android:id="@+id/loading"
         android:layout_width="wrap_content"
@@ -24,6 +26,8 @@
             android:text="@string/loading"
             android:textSize="18dp" />
     </LinearLayout>
+
+    <!-- 刷新提示 -->
 
     <LinearLayout
         android:id="@+id/refresh"
@@ -76,8 +80,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:cacheColorHint="#00000000"
-                android:focusable="true"
-                android:listSelector="#FFFFFF" >
+                android:focusable="true" >
             </com.jnu.thesis.view.EmbeddedListView>
         </LinearLayout>
     </ScrollView>
@@ -86,11 +89,11 @@
         android:id="@+id/button_submit"
         android:layout_width="fill_parent"
         android:layout_height="40dp"
-        android:layout_above="@id/scrollView_thesis"
         android:layout_alignParentBottom="true"
         android:background="@drawable/button_selector"
         android:text="@string/button_submit"
-        android:textSize="20dp" >
+        android:textSize="20dp"
+        android:visibility="gone" >
     </Button>
 
 </RelativeLayout>
