--- a/Thesis/res/layout/view_thesis_child.xml
+++ b/Thesis/res/layout/view_thesis_child.xml
@@ -13,6 +13,7 @@
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="20dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
         android:gravity="center_vertical"
         android:lineSpacingExtra="8dp"
         android:singleLine="false"
