--- a/Thesis/res/layout/fragment_t_thesis.xml
+++ b/Thesis/res/layout/fragment_t_thesis.xml
@@ -68,15 +68,6 @@
             android:layout_weight="1"
             android:background="@drawable/button_selector"
             android:src="@drawable/ic_menu_btn_add" />
-
-        <ImageButton
-            android:id="@+id/button_edit"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/button_selector"
-            android:src="@drawable/ic_menu_edit" >
-        </ImageButton>
     </LinearLayout>
 
     <ListView
@@ -84,6 +75,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:cacheColorHint="#00000000"
+        android:listSelector="@android:color/transparent"
         android:visibility="gone" >
     </ListView>
 
