--- a/Thesis/res/layout/fragment_thesis.xml
+++ b/Thesis/res/layout/fragment_thesis.xml
@@ -80,7 +80,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:cacheColorHint="#00000000"
-                android:focusable="true" >
+                android:focusable="true"
+                android:listSelector="@android:color/transparent" >
             </com.jnu.thesis.view.EmbeddedListView>
         </LinearLayout>
     </ScrollView>
