我也不知道改了什么, 大概是加了个莫名其妙的即使通讯吧, 发送到tag tag是tagForTest. 怎样也好了

--- a/Thesis/res/layout/activity_upload.xml
+++ b/Thesis/res/layout/activity_upload.xml
@@ -37,7 +37,7 @@
             android:layout_marginStart="@dimen/qq_dimen_8px"
             android:layout_toEndOf="@+id/img"
             android:layout_toRightOf="@+id/img"
-            android:text="@string/message_detail"
+            android:text="@string/upload"
             android:textColor="@android:color/white"
             android:textSize="@dimen/qq_dimen_30px" />
     </RelativeLayout>
