--- a/Thesis/res/layout/activity_download.xml
+++ b/Thesis/res/layout/activity_download.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#dddddd"
     tools:context="${relativePackage}.${activityClass}" >
 
     <RelativeLayout
@@ -38,56 +37,16 @@
             android:layout_marginStart="@dimen/qq_dimen_8px"
             android:layout_toEndOf="@+id/img"
             android:layout_toRightOf="@+id/img"
-            android:text="@string/button_chat"
+            android:text="@string/button_download"
             android:textColor="@android:color/white"
             android:textSize="@dimen/qq_dimen_30px" />
     </RelativeLayout>
 
     <ListView
-        android:id="@+id/list_chat"
+        android:id="@+id/listView_net"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/title"
-        android:layout_marginBottom="38dp"
-        android:background="#dddddd"
-        android:cacheColorHint="#00000000"
-        android:divider="@null"
-        android:listSelector="#00000000"
-        android:stackFromBottom="true"
-        android:transcriptMode="alwaysScroll" >
+        android:layout_below="@id/title" >
     </ListView>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="#ffffff" >
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_alignParentTop="true"
-            android:background="#bcbcbc" />
-
-        <ImageButton
-            android:id="@+id/button_send"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/blank_selector"
-            android:src="@drawable/ic_menu_send" />
-
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_toLeftOf="@id/button_send"
-            android:layout_toStartOf="@id/button_send"
-            android:background="@drawable/edittext_selector" />
-    </RelativeLayout>
 
 </RelativeLayout>
