--- a/Thesis/res/layout/fragment__group.xml
+++ b/Thesis/res/layout/fragment__group.xml
@@ -23,6 +23,19 @@
         android:background="#00FFFFFF" />
 
     <Button
+        android:id="@+id/button_download"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/common_button_selector"
+        android:text="@string/button_download"
+        android:textSize="18dp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:background="#00FFFFFF" />
+
+    <Button
         android:id="@+id/button_upload"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
